syntax = "proto3";

package user;

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool isValid = 1;
  string userId = 2;
  string errorMessage = 3;
}

message UserInfoRequest {
  string userId = 1;
}

message UserInfoResponse {
  string name = 1;
  string email = 2;
}
message UserPreferenceReq {
  string userId = 1;
}

message UserPreferenceRes {
  repeated string viewing_habits = 1;
}
service UserService {
    rpc validate (TokenRequest) returns (TokenResponse);
    rpc getUser(UserInfoRequest) returns (UserInfoResponse) {}
    rpc getUserPreferences(UserPreferenceReq) returns (UserPreferenceRes) {}
  }
